deployk8s/ingress-controller/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service: 
      name: default-http-backend
      port: 
  #      name: http
        number: 80
  rules:
  - host: www.abc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx-service
            port: 
              number: 8000
  - host: k8s1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx-service
            port: 
              number: 8000
  - host: k8s2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx-service
            port: 
              number: 8000
